--- a/pipeline/new_notebook.ipynb
+++ b/pipeline/new_notebook.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "555f63b4-94dd-404a-bb52-7a9929bb0d8e",
    "metadata": {},
    "outputs": [],
@@ -581,59 +581,472 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "933df5d9-2644-4a59-abab-6e023b90f9b4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2026-01-31 15:00:25--  https://d37ci6vzurychx.cloudfront.net/misc/taxi_zone_lookup.csv\n",
+      "Resolving d37ci6vzurychx.cloudfront.net (d37ci6vzurychx.cloudfront.net)... 18.239.115.213, 18.239.115.146, 18.239.115.86, ...\n",
+      "Connecting to d37ci6vzurychx.cloudfront.net (d37ci6vzurychx.cloudfront.net)|18.239.115.213|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 12331 (12K) [text/csv]\n",
+      "Saving to: ‘taxi_zone_lookup.csv’\n",
+      "\n",
+      "taxi_zone_lookup.cs 100%[===================>]  12.04K  --.-KB/s    in 0s      \n",
+      "\n",
+      "2026-01-31 15:00:25 (216 MB/s) - ‘taxi_zone_lookup.csv’ saved [12331/12331]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget https://d37ci6vzurychx.cloudfront.net/misc/taxi_zone_lookup.csv"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8df490f1-c4ff-4cbb-8d9c-d0ce6d79bd43",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_zones = pd.read_csv('taxi_zone_lookup.csv')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c75f9728-413a-47ff-925e-46d463d1ac2c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LocationID</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Zone</th>\n",
+       "      <th>service_zone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>EWR</td>\n",
+       "      <td>Newark Airport</td>\n",
+       "      <td>EWR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>Jamaica Bay</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>Allerton/Pelham Gardens</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Alphabet City</td>\n",
+       "      <td>Yellow Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Staten Island</td>\n",
+       "      <td>Arden Heights</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LocationID        Borough                     Zone service_zone\n",
+       "0           1            EWR           Newark Airport          EWR\n",
+       "1           2         Queens              Jamaica Bay    Boro Zone\n",
+       "2           3          Bronx  Allerton/Pelham Gardens    Boro Zone\n",
+       "3           4      Manhattan            Alphabet City  Yellow Zone\n",
+       "4           5  Staten Island            Arden Heights    Boro Zone"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_zones.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "650a8e06-e0a9-49e3-8f67-d30a5b71310e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "265"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_zones)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "54c95fed-1142-4588-aba5-6ac2e5560efb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LocationID      int64\n",
+       "Borough           str\n",
+       "Zone              str\n",
+       "service_zone      str\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_zones.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "865bba50-9d9b-4617-8461-c99e565c7a6a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "engine = create_engine('postgresql://root:root@localhost:5432/ny_taxi')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "527dd95a-0ccf-4846-b187-17225a1bdf3c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[31mSignature:\u001b[39m\n",
+       "df_zones.to_sql(\n",
+       "    name: \u001b[33m'str'\u001b[39m,\n",
+       "    con,\n",
+       "    *,\n",
+       "    schema: \u001b[33m'str | None'\u001b[39m = \u001b[38;5;28;01mNone\u001b[39;00m,\n",
+       "    if_exists: \u001b[33m\"Literal['fail', 'replace', 'append', 'delete_rows']\"\u001b[39m = \u001b[33m'fail'\u001b[39m,\n",
+       "    index: \u001b[33m'bool'\u001b[39m = \u001b[38;5;28;01mTrue\u001b[39;00m,\n",
+       "    index_label: \u001b[33m'IndexLabel | None'\u001b[39m = \u001b[38;5;28;01mNone\u001b[39;00m,\n",
+       "    chunksize: \u001b[33m'int | None'\u001b[39m = \u001b[38;5;28;01mNone\u001b[39;00m,\n",
+       "    dtype: \u001b[33m'DtypeArg | None'\u001b[39m = \u001b[38;5;28;01mNone\u001b[39;00m,\n",
+       "    method: \u001b[33m\"Literal['multi'] | Callable | None\"\u001b[39m = \u001b[38;5;28;01mNone\u001b[39;00m,\n",
+       ") -> \u001b[33m'int | None'\u001b[39m\n",
+       "\u001b[31mDocstring:\u001b[39m\n",
+       "Write records stored in a DataFrame to a SQL database.\n",
+       "\n",
+       "Databases supported by SQLAlchemy [1]_ are supported. Tables can be\n",
+       "newly created, appended to, or overwritten.\n",
+       "\n",
+       ".. warning::\n",
+       "    The pandas library does not attempt to sanitize inputs provided via a to_sql call.\n",
+       "    Please refer to the documentation for the underlying database driver to see if it\n",
+       "    will properly prevent injection, or alternatively be advised of a security risk when\n",
+       "    executing arbitrary commands in a to_sql call.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "name : str\n",
+       "    Name of SQL table.\n",
+       "con : ADBC connection, sqlalchemy.engine.(Engine or Connection) or sqlite3.Connection\n",
+       "    ADBC provides high performance I/O with native type support, where available.\n",
+       "    Using SQLAlchemy makes it possible to use any DB supported by that\n",
+       "    library. Legacy support is provided for sqlite3.Connection objects. The user\n",
+       "    is responsible for engine disposal and connection closure for the SQLAlchemy\n",
+       "    connectable. See `here                 <https://docs.sqlalchemy.org/en/20/core/connections.html>`_.\n",
+       "    If passing a sqlalchemy.engine.Connection which is already in a transaction,\n",
+       "    the transaction will not be committed.  If passing a sqlite3.Connection,\n",
+       "    it will not be possible to roll back the record insertion.\n",
+       "\n",
+       "schema : str, optional\n",
+       "    Specify the schema (if database flavor supports this). If None, use\n",
+       "    default schema.\n",
+       "if_exists : {'fail', 'replace', 'append', 'delete_rows'}, default 'fail'\n",
+       "    How to behave if the table already exists.\n",
+       "\n",
+       "    * fail: Raise a ValueError.\n",
+       "    * replace: Drop the table before inserting new values.\n",
+       "    * append: Insert new values to the existing table.\n",
+       "    * delete_rows: If a table exists, delete all records and insert data.\n",
+       "\n",
+       "index : bool, default True\n",
+       "    Write DataFrame index as a column. Uses `index_label` as the column\n",
+       "    name in the table. Creates a table index for this column.\n",
+       "index_label : str or sequence, default None\n",
+       "    Column label for index column(s). If None is given (default) and\n",
+       "    `index` is True, then the index names are used.\n",
+       "    A sequence should be given if the DataFrame uses MultiIndex.\n",
+       "chunksize : int, optional\n",
+       "    Specify the number of rows in each batch to be written to the database connection at a time.\n",
+       "    By default, all rows will be written at once. Also see the method keyword.\n",
+       "dtype : dict or scalar, optional\n",
+       "    Specifying the datatype for columns. If a dictionary is used, the\n",
+       "    keys should be the column names and the values should be the\n",
+       "    SQLAlchemy types or strings for the sqlite3 legacy mode. If a\n",
+       "    scalar is provided, it will be applied to all columns.\n",
+       "method : {None, 'multi', callable}, optional\n",
+       "    Controls the SQL insertion clause used:\n",
+       "\n",
+       "    * None : Uses standard SQL ``INSERT`` clause (one per row).\n",
+       "    * 'multi': Pass multiple values in a single ``INSERT`` clause.\n",
+       "    * callable with signature ``(pd_table, conn, keys, data_iter)``.\n",
+       "\n",
+       "    Details and a sample callable implementation can be found in the\n",
+       "    section :ref:`insert method <io.sql.method>`.\n",
+       "\n",
+       "Returns\n",
+       "-------\n",
+       "None or int\n",
+       "    Number of rows affected by to_sql. None is returned if the callable\n",
+       "    passed into ``method`` does not return an integer number of rows.\n",
+       "\n",
+       "    The number of returned rows affected is the sum of the ``rowcount``\n",
+       "    attribute of ``sqlite3.Cursor`` or SQLAlchemy connectable which may not\n",
+       "    reflect the exact number of written rows as stipulated in the\n",
+       "    `sqlite3 <https://docs.python.org/3/library/sqlite3.html#sqlite3.Cursor.rowcount>`__ or\n",
+       "    `SQLAlchemy <https://docs.sqlalchemy.org/en/20/core/connections.html#sqlalchemy.engine.CursorResult.rowcount>`__.\n",
+       "\n",
+       "Raises\n",
+       "------\n",
+       "ValueError\n",
+       "    When the table already exists and `if_exists` is 'fail' (the\n",
+       "    default).\n",
+       "\n",
+       "See Also\n",
+       "--------\n",
+       "read_sql : Read a DataFrame from a table.\n",
+       "\n",
+       "Notes\n",
+       "-----\n",
+       "Timezone aware datetime columns will be written as\n",
+       "``Timestamp with timezone`` type with SQLAlchemy if supported by the\n",
+       "database. Otherwise, the datetimes will be stored as timezone unaware\n",
+       "timestamps local to the original timezone.\n",
+       "\n",
+       "Not all datastores support ``method=\"multi\"``. Oracle, for example,\n",
+       "does not support multi-value insert.\n",
+       "\n",
+       "References\n",
+       "----------\n",
+       ".. [1] https://docs.sqlalchemy.org\n",
+       ".. [2] https://www.python.org/dev/peps/pep-0249/\n",
+       "\n",
+       "Examples\n",
+       "--------\n",
+       "Create an in-memory SQLite database.\n",
+       "\n",
+       ">>> from sqlalchemy import create_engine\n",
+       ">>> engine = create_engine('sqlite://', echo=False)\n",
+       "\n",
+       "Create a table from scratch with 3 rows.\n",
+       "\n",
+       ">>> df = pd.DataFrame({'name' : ['User 1', 'User 2', 'User 3']})\n",
+       ">>> df\n",
+       "     name\n",
+       "0  User 1\n",
+       "1  User 2\n",
+       "2  User 3\n",
+       "\n",
+       ">>> df.to_sql(name='users', con=engine)\n",
+       "3\n",
+       ">>> from sqlalchemy import text\n",
+       ">>> with engine.connect() as conn:\n",
+       "...     conn.execute(text(\"SELECT * FROM users\")).fetchall()\n",
+       "[(0, 'User 1'), (1, 'User 2'), (2, 'User 3')]\n",
+       "\n",
+       "An `sqlalchemy.engine.Connection` can also be passed to `con`:\n",
+       "\n",
+       ">>> with engine.begin() as connection:\n",
+       "...     df1 = pd.DataFrame({'name' : ['User 4', 'User 5']})\n",
+       "...     df1.to_sql(name='users', con=connection, if_exists='append')\n",
+       "2\n",
+       "\n",
+       "This is allowed to support operations that require that the same\n",
+       "DBAPI connection is used for the entire operation.\n",
+       "\n",
+       ">>> df2 = pd.DataFrame({'name' : ['User 6', 'User 7']})\n",
+       ">>> df2.to_sql(name='users', con=engine, if_exists='append')\n",
+       "2\n",
+       ">>> with engine.connect() as conn:\n",
+       "...     conn.execute(text(\"SELECT * FROM users\")).fetchall()\n",
+       "[(0, 'User 1'), (1, 'User 2'), (2, 'User 3'),\n",
+       " (0, 'User 4'), (1, 'User 5'), (0, 'User 6'),\n",
+       " (1, 'User 7')]\n",
+       "\n",
+       "Overwrite the table with just ``df2``.\n",
+       "\n",
+       ">>> df2.to_sql(name='users', con=engine, if_exists='replace',\n",
+       "...            index_label='id')\n",
+       "2\n",
+       ">>> with engine.connect() as conn:\n",
+       "...     conn.execute(text(\"SELECT * FROM users\")).fetchall()\n",
+       "[(0, 'User 6'), (1, 'User 7')]\n",
+       "\n",
+       "Delete all rows before inserting new records with ``df3``\n",
+       "\n",
+       ">>> df3 = pd.DataFrame({\"name\": ['User 8', 'User 9']})\n",
+       ">>> df3.to_sql(name='users', con=engine, if_exists='delete_rows',\n",
+       "...            index_label='id')\n",
+       "2\n",
+       ">>> with engine.connect() as conn:\n",
+       "...     conn.execute(text(\"SELECT * FROM users\")).fetchall()\n",
+       "[(0, 'User 8'), (1, 'User 9')]\n",
+       "\n",
+       "Use ``method`` to define a callable insertion method to do nothing\n",
+       "if there's a primary key conflict on a table in a PostgreSQL database.\n",
+       "\n",
+       ">>> from sqlalchemy.dialects.postgresql import insert\n",
+       ">>> def insert_on_conflict_nothing(table, conn, keys, data_iter):\n",
+       "...     # \"a\" is the primary key in \"conflict_table\"\n",
+       "...     data = [dict(zip(keys, row)) for row in data_iter]\n",
+       "...     stmt = insert(table.table).values(data).on_conflict_do_nothing(index_elements=[\"a\"])\n",
+       "...     result = conn.execute(stmt)\n",
+       "...     return result.rowcount\n",
+       ">>> df_conflict.to_sql(name=\"conflict_table\", con=conn, if_exists=\"append\",  # noqa: F821\n",
+       "...                    method=insert_on_conflict_nothing)  # doctest: +SKIP\n",
+       "0\n",
+       "\n",
+       "For MySQL, a callable to update columns ``b`` and ``c`` if there's a conflict\n",
+       "on a primary key.\n",
+       "\n",
+       ">>> from sqlalchemy.dialects.mysql import insert   # noqa: F811\n",
+       ">>> def insert_on_conflict_update(table, conn, keys, data_iter):\n",
+       "...     # update columns \"b\" and \"c\" on primary key conflict\n",
+       "...     data = [dict(zip(keys, row)) for row in data_iter]\n",
+       "...     stmt = (\n",
+       "...         insert(table.table)\n",
+       "...         .values(data)\n",
+       "...     )\n",
+       "...     stmt = stmt.on_duplicate_key_update(b=stmt.inserted.b, c=stmt.inserted.c)\n",
+       "...     result = conn.execute(stmt)\n",
+       "...     return result.rowcount\n",
+       ">>> df_conflict.to_sql(name=\"conflict_table\", con=conn, if_exists=\"append\",  # noqa: F821\n",
+       "...                    method=insert_on_conflict_update)  # doctest: +SKIP\n",
+       "2\n",
+       "\n",
+       "Specify the dtype (especially useful for integers with missing values).\n",
+       "Notice that while pandas is forced to store the data as floating point,\n",
+       "the database supports nullable integers. When fetching the data with\n",
+       "Python, we get back integer scalars.\n",
+       "\n",
+       ">>> df = pd.DataFrame({\"A\": [1, None, 2]})\n",
+       ">>> df\n",
+       "     A\n",
+       "0  1.0\n",
+       "1  NaN\n",
+       "2  2.0\n",
+       "\n",
+       ">>> from sqlalchemy.types import Integer\n",
+       ">>> df.to_sql(name='integers', con=engine, index=False,\n",
+       "...           dtype={\"A\": Integer()})\n",
+       "3\n",
+       "\n",
+       ">>> with engine.connect() as conn:\n",
+       "...     conn.execute(text(\"SELECT * FROM integers\")).fetchall()\n",
+       "[(1,), (None,), (2,)]\n",
+       "\n",
+       ".. versionadded:: 2.2.0\n",
+       "\n",
+       "   pandas now supports writing via ADBC drivers\n",
+       "\n",
+       ">>> df = pd.DataFrame({'name' : ['User 10', 'User 11', 'User 12']})\n",
+       ">>> df\n",
+       "      name\n",
+       "0  User 10\n",
+       "1  User 11\n",
+       "2  User 12\n",
+       "\n",
+       ">>> from adbc_driver_sqlite import dbapi  # doctest:+SKIP\n",
+       ">>> with dbapi.connect(\"sqlite://\") as conn:  # doctest:+SKIP\n",
+       "...     df.to_sql(name=\"users\", con=conn)\n",
+       "3\n",
+       "\u001b[31mFile:\u001b[39m      /workspaces/data_engineering_zoomcamp/pipeline/.venv/lib/python3.13/site-packages/pandas/core/generic.py\n",
+       "\u001b[31mType:\u001b[39m      method"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_zones.to_sql?"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "58bff93e-3f11-4902-a87b-bc21e30b6ada",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "265"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_zones.to_sql(name='zones',con=engine,if_exists='replace')"
+   ]
   },
   {
    "cell_type": "code",
